--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/appleShop
+    url: jdbc:h2:tcp://localhost/~/showMeThePC
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
-
 
   jpa:
     hibernate:
